# wakeControl

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
GOP/: CMakeLists.txt  GOP.h
GP/: CMakeLists.txt  GP.h
QP/: CMakeLists.txt  QP.h
excel/: CMakeLists.txt  excel.cpp  excel.h
figure/: CMakeLists.txt  figure.cpp  figure.h  figureMain.cpp
include/: head.h
input/: CMakeLists.txt  input.cpp  input.h  turbCloudGeneration.cpp  turbCloudGeneration.h
lib/: QP.lib  matrixOperation.lib  model.lib  solver.lib
main/: wakeControl.cpp  wakeControl.h
mainOnline/: CMakeLists.txt  mainOnline.cpp
matrixOperation/: CMakeLists.txt  matrixOperation.cpp  matrixOperation.h
model/: Blondel2.h  CMakeLists.txt  Gauss.h  Gauss2.h  Gauss3.h  blondel.h  contour.cpp  contour.h  empiricalGauss.h  model.h  turbPosition.cpp  turbPosition.h  wake.cpp  wake.h
run/: CMakeLists.txt  run.cpp  run.h
simulation/: CMakeLists.txt  simulation.cpp  simulation.h
solver/: CMakeLists.txt  GPsolver.cpp  LPsolver.cpp  QPsolver.cpp  solver.cpp  solver.h
statistics/: CMakeLists.txt  statistics.cpp  statistics.h
tecplot/: CMakeLists.txt  tecplot.cpp  tecplot.h
template/: CMakeLists.txt  template.cpp  template.h  templateMain.cpp
turbCloud/: CMakeLists.txt  turbCloud.cpp  turbCloud.h
usr/: CMakeLists.txt  MyECGP.cpp  MyEICGP.cpp  MyEICGP2.cpp  MyEICGP3.cpp  MyICGP.cpp  MyNCGP.cpp  Yaw.cpp  usr.h
wakeControl/: CMakeLists.txt  wakeControl.cpp
wakeControlOnline/: CMakeLists.txt  wakeControlOnline.cpp  wakeControlOnline.h
